compiler-core/main/__parse/parse/snapshots/gleam_core____parse__parse__tests__case_guard_with_empty_block.snap
---
source: compiler-core/src_refactored/__parse/parse/tests.rs
assertion_line: 1940
expression: "case 1 {\n  _ if a || {}  -> 1\n}"
snapshot_kind: text
---
----- SOURCE CODE
case 1 {
  _ if a || {}  -> 1
}

----- ERROR
error: Syntax error
  ┌─ /src/parse/error.gleam:2:13
  │
2 │   _ if a || {}  -> 1
  │             ^^ A clause guard block cannot be empty
